--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  clip-path: polygon(0 0, 100% 0%, 50% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%);
 }
 .landingPage::after {
     content: '';
@@ -13,7 +13,16 @@
     height: 100%;
     width: 100%;
     background-color: black;
-    clip-path: polygon(0 0, 100% 0%, 50% 100%, 0 100%);
-    opacity: 0.5;
+    clip-path: polygon(0 0, 100% 0%, 70% 100%, 0 100%);
+    opacity: 0.7;
     z-index: -1;
+}
+@media screen and (max-width: 600px) {
+  .landingPage {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    
+  }
+  .landingPage::after {
+      clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  }
 }
