--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .landingPage {
-  background: url('../../Assets/Logos/bg.png') no-repeat center center/cover;
+  background: url('../../Assets/Logos/bg.webp') no-repeat center center/cover;
   width: 100%;
   height: 100vh;
   position: relative;
